--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Homepage</title>
-    <link rel="icon" href="../images\Tab-Icons\JS-icon.png"/>
-    <link rel="stylesheet" href="../styles.css">
-    <script src="../Reuse.js"></script> 
-    <script src="../mobile-nav-button.js" defer></script>
-    <script src="../darkmode.js" defer></script> 
+    <link rel="icon" href="images\Tab-Icons\JS-icon.png"/>
+    <link rel="stylesheet" href="styles.css">
+    <script src="Reuse.js"></script> 
+    <script src="mobile-nav-button.js" defer></script>
+    <script src="darkmode.js" defer></script> 
 </head>
 
 <body>
