--- a/SelfHosted/unRaid.html
+++ b/SelfHosted/unRaid.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS UNRAID</title>
-    <link rel="icon" href="../images\Tab-Icons\JS-icon.png"/>
-    <link rel="stylesheet" href="../styles.css">
-    <script src="../Reuse.js"></script> 
-    <script src="../mobile-nav-button.js" defer></script>
-    <script src="../darkmode.js" defer></script> 
+    <title>Event!</title>
+    <link rel="icon" href="images\Tab-Icons\JS-icon.png"/>
+    <link rel="stylesheet" href="styles.css">
+    <script src="Reuse.js"></script> 
+    <script src="mobile-nav-button.js" defer></script>
+    <script src="darkmode.js" defer></script> 
 </head>
 
 <body>
