--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homepage</title>
+    <title>Event!</title>
     <link rel="icon" href="images\Tab-Icons\JS-icon.png"/>
     <link rel="stylesheet" href="styles.css">
     <script src="Reuse.js"></script> 
