Live server changes

--- a/SelfHosted/unRaid.html
+++ b/SelfHosted/unRaid.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event!</title>
+    <title>Joost Sluijmer</title>
     <link rel="icon" href="images\Tab-Icons\JS-icon.png"/>
-    <link rel="stylesheet" href="styles.css">
-    <script src="Reuse.js"></script> 
-    <script src="mobile-nav-button.js" defer></script>
-    <script src="darkmode.js" defer></script> 
+    <link rel="stylesheet" href="/styles.css">
+    <script src="/Reuse.js"></script> 
+    <script src="/mobile-nav-button.js" defer></script>
+    <script src="/darkmode.js" defer></script> 
 </head>
 
 <body>
@@ -35,12 +35,16 @@
                         Currently the hardware used is all old hardware used for old computer builds.
                         I am planning on upgrading it to more efficient and faster components.
                         <ul>
-                            <li>Motherboard: Micro-ATX H81</li>
-                            <li>Processor: Intel core I5-4690k</li>
-                            <li>RAM: 16GB DDR3</li>
+                            <li>Motherboard: MSI B760M Mortar</li>
+                            <li>Processor: Intel core I5-13500</li>
+                            <li>RAM: 32B DDR5</li>
                             <li>Network interface: Onboard 1Gbps ethernet port.</li>
-                            <li>PSU: </li>
-                            <li>Storage: 3x 4TB NAS HDD (1 parity & 2 storage), 1x 1TB SATA SSD for caching.</li>
+                            <li>PSU: 650W</li>
+                            <li>UPS: 1200W</li>
+                            <li>Storage:
+                                <li> LTS: 3x 4TB NAS HDD (1 parity & 2 storage)</li>
+                                <li>Cache: 1x 1TB SATA SSD for caching.</li>
+                            </li>
                         </ul>
                     </div>
                     <h3>The software</h3>
@@ -75,7 +79,7 @@
                         Currently the only VM is for HomeAssitant OS. This is because this will allow for all the HomeAssistant features in one central place without additional docker containers.
                         <P>If you want to read more about the benefits of HA OS instead of a docker container I recommend reading this: <a href="https://www.home-assistant.io/installation/"> HA installations</a>.</P> 
                         <h4>A visual representation of my setup:</h4>
-                        <img style="height: 100%; width: 100%; object-fit: contain;" src="../images/UNRAID_infra.png" alt="My UNRAID infrastructure" class="center_image">
+                        <img style="height: 100%; width: 100%; object-fit: contain;" src="/images/UNRAID_infra.png" alt="My UNRAID infrastructure" class="center_image">
                     </div>
                     
                     <p>Interested in reading more about UNRAID? Find out everything on their own website: <a href="https://UNRAID.net/product">UNRAID features</a>.</p> 
