--- a/SelfHosted/SelfHosted.html
+++ b/SelfHosted/SelfHosted.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div>
-            <h1>Joost Sluijmer</h1>
+            <h1>Selfhosted</h1>
         </div>
         <app-header-buttons></app-header-buttons>
     </header>
@@ -28,7 +28,7 @@
     <main>
         
         <article>
-            <!-- <h4>Independance</h4> -->
+            <h2>Independance</h2>
             This website is to demonstrate how I have made the virtual part of my life more independant of big businesses, subscriptions and to make it easier to use.
             <div class="article-title">
                 <h2><a href="../SelfHosted/unRaid.html">unRAID</a></h2>
