--- a/SelfHosted/NextCloud.html
+++ b/SelfHosted/NextCloud.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joost Sluijmer</title>
-    <link rel="icon" href="images\Tab-Icons\JS-icon.png"/>
+    <link rel="icon" href="/images\Tab-Icons\JS-icon.png"/>
     <link rel="stylesheet" href="/styles.css">
     <script src="/Reuse.js"></script> 
     <script src="/mobile-nav-button.js" defer></script>
