Dropdown shadow top fixed/removed

--- a/SelfHosted/SelfHosted.html
+++ b/SelfHosted/SelfHosted.html
@@ -31,7 +31,7 @@
             <h2>Independance</h2>
             This website is to demonstrate how I have made the virtual part of my life more independant of big businesses, subscriptions and to make it easier to use.
             <div class="article-title">
-                <h2><a href="../SelfHosted/unRaid.html">unRAID</a></h2>
+                <h2><a href="../SelfHosted/unRaid.html">Unraid</a></h2>
                 <div class="article-info">
                     <h3>My homemade NAS with parity, docker, VMs and gameservers.</h3>
                     <div class="article-text">
