gallery box-shadow

--- a/index.html
+++ b/index.html
@@ -34,20 +34,20 @@
                     <div class="article-text">
                         <div class="media-scroller">
                             <div class="media-element">
-                              <img src="https://images.unsplash.com/photo-1641353989082-9b15fa661805?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
-                              <p class="title">Short title</p>
+                              <img src="\images\Illustrative\Outward_bound\Sunset.jpg" alt="">
+                              <p class="title">The best views come after an intense day.</p>
                             </div>
                             <div class="media-element">
-                              <img src="https://images.unsplash.com/photo-1642190672487-22bde32965f7?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
-                              <p class="title">A longer title here</p>
+                              <img src="\images\Illustrative\Outward_bound\Lake_climb.jpg" alt="">
+                              <p class="title">Or when hiking up a mountain.</p>
                             </div>
                             <div class="media-element">
-                              <img src="https://images.unsplash.com/photo-1641841344411-49dbd02896f4?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
-                              <p class="title">An even longer title on this one</p>
+                              <img src="\images\Illustrative\Outward_bound\Early_hike.JPG" alt="">
+                              <p class="title">Or when you wake up really early.</p>
                             </div>
                             <div class="media-element">
-                              <img src="https://images.unsplash.com/photo-1643223723262-7ce785730cf6?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxNDU4OXwwfDF8cmFuZG9tfHx8fHx8fHx8MTY0MzM5ODcyOA&ixlib=rb-1.2.1&q=80&w=400" alt="">
-                              <p class="title">A dog that's blinking?</p>
+                              <img src="\images\Illustrative\Outward_bound\Resting.JPG" alt="">
+                              <p class="title">But sometimes you just need to take a break.</p>
                             </div>
                             
                           </div>                
