einde 18 sept hu

--- a/index.html
+++ b/index.html
@@ -30,11 +30,27 @@
             <div class="article-title">
                 <h2>Welcome to my personal website.</h2>
                 <div class="article-info">
-                    <h3>Why this website?</h3>
+                    <h3>A little bit about me.</h3>
                     <div class="article-text">
-                        <!-- <h4>Independance</h4> -->
-                        This website is to demonstrate how I have made the virtual part of my life more independant of big businesses, subscriptions and to make it easier to use.
-                        
+                        <div class="media-scroller">
+                            <div class="media-element">
+                              <img src="\images\Illustrative\Outward_bound\Sunset.jpg" alt="">
+                              <p class="title">The best views come after an intense day.</p>
+                            </div>
+                            <div class="media-element">
+                              <img src="\images\Illustrative\Outward_bound\Lake_climb.jpg" alt="">
+                              <p class="title">Or when hiking up a mountain.</p>
+                            </div>
+                            <div class="media-element">
+                              <img src="\images\Illustrative\Outward_bound\Early_hike.JPG" alt="">
+                              <p class="title">Or when you wake up really early.</p>
+                            </div>
+                            <div class="media-element">
+                              <img src="\images\Illustrative\Outward_bound\Resting.JPG" alt="">
+                              <p class="title">But sometimes you just need to take a break.</p>
+                            </div>
+                            
+                          </div>                
                     </div>
                 </div>
             </div>  
