--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                 </div>
             </div>  
         </article>
-        <div class="side-bar">
+        <!-- <div class="side-bar">
             <app-sidebar></app-sidebar>
-        </div>
+        </div> -->
 
         
     </main>
