--- a/SelfHosted/unRaid.html
+++ b/SelfHosted/unRaid.html
@@ -86,9 +86,9 @@
                 </div>
             </div>
         </article>
-        <div class="side-bar">
+        <!-- <div class="side-bar">
             <app-sidebar></app-sidebar>
-        </div>
+        </div> -->
 
     </main>
 
