--- a/my_history.html
+++ b/my_history.html
@@ -32,7 +32,42 @@
                 <div class="article-info">
                     <h3>heading 3 (article info?)</h3>
                     <div class="article-text">
-                        Enter text here!
+                        <h4>Vacational studies</h4>
+                        <article>
+                            text over VacStuds
+                        </article>
+
+                        <h4>Outward bound</h4>
+                        <article>
+                            text over outward bound
+                        </article>
+                        <div class="media-scroller">
+                            <div class="media-element">
+                              <img src="\images\Illustrative\Outward_bound\Sunset.jpg" alt="">
+                              <p class="title">The best views come after an intense day.</p>
+                            </div>
+                            <div class="media-element">
+                              <img src="\images\Illustrative\Outward_bound\Lake_climb.jpg" alt="">
+                              <p class="title">Or when hiking up a mountain.</p>
+                            </div>
+                            <div class="media-element">
+                              <img src="\images\Illustrative\Outward_bound\Early_hike.JPG" alt="">
+                              <p class="title">Or when you wake up really early.</p>
+                            </div>
+                            <div class="media-element">
+                              <img src="\images\Illustrative\Outward_bound\Resting.JPG" alt="">
+                              <p class="title">But sometimes you just need to take a break.</p>
+                            </div>
+                        </div>
+                        <h4>WTB?</h4>
+                        <article>
+                            WTB text
+                        </article>
+                        <h4>E</h4>
+                        <article>
+                            Electro text
+                        </article>
+
                     </div>
                 </div>
             </div>  
