--- a/SelfHosted/NextCloud.html
+++ b/SelfHosted/NextCloud.html
@@ -58,9 +58,9 @@
                 </div>
             </div>  
         </article>
-        <div class="side-bar">
+        <!-- <div class="side-bar">
             <app-sidebar></app-sidebar>
-        </div>
+        </div> -->
 
     </main>
 
