--- a/SelfHosted/SelfHosted.html
+++ b/SelfHosted/SelfHosted.html
@@ -54,9 +54,9 @@
                 </div>
             </div>  
         </article>
-        <div class="side-bar">
+        <!-- <div class="side-bar">
             <app-sidebar></app-sidebar>
-        </div>
+        </div> -->
 
     </main>
     <footer>
