--- a/SelfHosted/SelfHosted.html
+++ b/SelfHosted/SelfHosted.html
@@ -7,9 +7,13 @@
     <title>Joost Sluijmer</title>
     <link rel="icon" href="/images\Tab-Icons\JS-icon.png"/>
     <link rel="stylesheet" href="/styles.css">
-    <script src="/Reuse.js"></script> 
-    <script src="/mobile-nav-button.js" defer></script>
-    <script src="/darkmode.js" defer></script> 
+    <script src="/scripts/Reuse.js"></script>
+    <!-- <script src="/scripts/Navigation.js"></script>
+    <script src="/scripts/Sidebar.js"></script>
+    <script src="/scripts/HeaderButtons.js"></script>
+    <script src="/scripts/Footer.js"></script> -->
+    <script src="/scripts/mobile-nav-button.js" defer></script>
+    <script src="/scripts/darkmode.js" defer></script>
 </head>
 
 <body>
