Scroll to top btn finished and styled

--- a/HU_projects.html
+++ b/HU_projects.html
@@ -47,6 +47,10 @@
 
     </main>
 
+    <ScrollBtn>
+        <app-scrolltotopbtn></app-scrolltotopbtn>
+    </ScrollBtn>
+    
     <footer>
         <app-footer></app-footer>
     </footer>
