--- a/SelfHosted/SelfHosted.html
+++ b/SelfHosted/SelfHosted.html
@@ -63,6 +63,11 @@
         </div> -->
 
     </main>
+    
+    <ScrollBtn>
+        <app-scrolltotopbtn></app-scrolltotopbtn>
+    </ScrollBtn>
+    
     <footer>
         <app-footer></app-footer>
     </footer>
