--- a/SelfHosted/unRaid.html
+++ b/SelfHosted/unRaid.html
@@ -14,9 +14,12 @@
     <script src="/scripts/Footer.js"></script> -->
     <script src="/scripts/mobile-nav-button.js" defer></script>
     <script src="/scripts/darkmode.js" defer></script>
+    <script src="/scripts/ScrollToTopBtn.js" defer></script>
+
 </head>
 
 <body>
+
     <header>
         <div>
             <h1>UNRAID</h1>
@@ -95,6 +98,10 @@
         </div> -->
 
     </main>
+
+    <ScrollBtn>
+        <app-scrolltotopbtn></app-scrolltotopbtn>
+    </ScrollBtn>
 
     <footer>
         <app-footer></app-footer>
