--- a/event.html
+++ b/event.html
@@ -60,6 +60,10 @@
         </div>
     </main>
 
+    <ScrollBtn>
+        <app-scrolltotopbtn></app-scrolltotopbtn>
+    </ScrollBtn>
+    
     <footer>
         <app-footer></app-footer>
     </footer>
