--- a/SelfHosted/HomeAssistant.html
+++ b/SelfHosted/HomeAssistant.html
@@ -82,6 +82,10 @@
         </div> -->
     </main>
 
+    <ScrollBtn>
+        <app-scrolltotopbtn></app-scrolltotopbtn>
+    </ScrollBtn>
+    
     <footer>
         <app-footer></app-footer>
     </footer>
