--- a/SelfHosted/NextCloud.html
+++ b/SelfHosted/NextCloud.html
@@ -68,6 +68,10 @@
 
     </main>
 
+    <ScrollBtn>
+        <app-scrolltotopbtn></app-scrolltotopbtn>
+    </ScrollBtn>
+    
     <footer>
         <app-footer></app-footer>
     </footer>
