--- a/my_history.html
+++ b/my_history.html
@@ -82,6 +82,10 @@
 
     </main>
 
+    <ScrollBtn>
+        <app-scrolltotopbtn></app-scrolltotopbtn>
+    </ScrollBtn>
+
     <footer>
         <app-footer></app-footer>
     </footer>
