--- a/SelfHosted/SelfHosted.html
+++ b/SelfHosted/SelfHosted.html
@@ -14,6 +14,7 @@
     <script src="/scripts/Footer.js"></script> -->
     <script src="/scripts/mobile-nav-button.js" defer></script>
     <script src="/scripts/darkmode.js" defer></script>
+    <script src="/scripts/ScrollToTopBtn.js" defer></script>
 </head>
 
 <body>
