--- a/SelfHosted/unRaid.html
+++ b/SelfHosted/unRaid.html
@@ -56,7 +56,8 @@
                     </div>
                     <h3>The software</h3>
                     <div class="article-text">
-                        UNRAID is an operating system that is designed to run on bare hardware, this is how I run it. 
+                        UNRAID is an operating system that is designed to run on bare hardware. 
+                        The primary function is a NAS but it has many more functionalities.
                         It is best to not run this in a VM but it is possible.
                         UNRAID boots of a USB drive but once loaded runs off of the RAM.
                     </div>
@@ -66,7 +67,7 @@
                         The primary use of my UNRAID machine is being a NAS. 
                         Since picture and video quality is getting better every year the file sizes have been growing just as fast. 
                         Increased file sizes, unloading the storage from my main systems and a fear of losing files when a drive fails made me build the NAS.
-                        This allows me to still move files to it from my main system just like you would on any normal folder. It also allows any other system on the local network once logged in to acces files.
+                        This allows me to still move files to it from my main system just like you would on any normal folder. It also allows any other system on the local network, once logged in, to acces files.
 
                         <h4>Docker</h4>
                         I run a lot of docker containers for ease of use. A couple examples and their use cases:
