--- a/my_history.html
+++ b/my_history.html
@@ -35,11 +35,24 @@
             <div class="article-title">
                 <h2>My journey thus far.</h2>
                 <div class="article-info">
-                    <h3>heading 3 (article info?)</h3>
+                    <h3>Courses and Experiences</h3>
                     <div class="article-text">
+                        Besides the normal study trajectory of primary school, highschool, university I have attended a couple different activities. 
+                        The reason behind this was to explore, have fun, get into contact with people from all over the world and develop myself on different levels. 
                         <h4>Vacational studies</h4>
                         <article>
-                            text over VacStuds
+                            <p>
+                                Vacational studies is a month long summer course for kids ages 10-18 in Newbury, Berkshire, UK.
+                                The owner and organizer has been running this concept since 1973.
+                                It is a place to develop yourself, start mastering the English language, play a lot of sports and most of all have a LOT of fun with your new friends from all over the world.
+                            </p>
+                            <p>
+                                The timetable for weekdays is classes in the morning, sports and other activities in the afternoon.
+                                After diner there would usually be an event or free time where you could have a calm and quiet night or find yourself in an intense impromptu volleyball tournement with hot chocolate after.
+                                Every now and then there would be an optional trip during the week this would usually be for muscials in London.
+                                In the weekend you would usually have 1 or 2 daytrips. Usually to London but occasionally somewhere else.
+                                During my time there I went on as many trips as possible. I have gone to multiple musicals and museums, an air show, been inside Buckingham Palace, Oxford and the list goes on.
+                            </p>
                         </article>
 
                         <h4>Outward bound</h4>
