--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <div>
-            <h1>Header text</h1>
+            <h1>Contact me</h1>
         </div>
         <app-header-buttons></app-header-buttons>
     </header>
@@ -31,7 +31,9 @@
     </nav>
 
     <main>
-        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe8_-QIw57a72PyMvldoKzVhQfWVJc7RX0eIyu4np-S-F5mJg/viewform?embedded=true" width="640" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        <contact>
+            <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSe8_-QIw57a72PyMvldoKzVhQfWVJc7RX0eIyu4np-S-F5mJg/viewform?embedded=true" width="640" height="824" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+        </contact>
     </main>
 
     <ScrollBtn>
