--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <script src="/scripts/mobile-nav-button.js" defer></script>
     <script src="/scripts/darkmode.js" defer></script>
     <script src="/scripts/ScrollToTopBtn.js" defer></script>
+    <!-- <script src="/scripts/Nav-sticky.js" defer></script> -->
 </head>
 
 <body>
