end of day 2-10

--- a/SelfHosted/HomeAssistant.html
+++ b/SelfHosted/HomeAssistant.html
@@ -61,7 +61,7 @@
                                 It will do this by sending a infra red command to the TV and then the speakers that is the same as the physical off button on their actual remote.
                             </p>
                             <p>
-                                <img style="height: 60%; width: 60%; object-fit: contain;" src="../images/HA_broadlink_tv_Speaker.png" alt="My TV automation" class="center_image">
+                                <img style="height: 60%; width: 60%; object-fit: contain;" src="../images/HA_broadlink_tv_Speaker.png" alt="My TV automation" class="center_image" id="HA-Broadlink-img">
                             </p>
                             All these and a lot more unusual automations are possible with Home Assistant!
                         </p>
