php not complete

--- a/contactDBphp.html
+++ b/contactDBphp.html
@@ -36,14 +36,17 @@
             <div class="contact-form">
                 <h1>Contact Me</h1>
                 <form id="contact-form">
-                    <label for="contact-name">Name:</label><br>
-                    <input type="text" id="contact-name" name="contact-name" placeholder="Your name..." required>
+                    <label for="contactFirstname">First name:</label><br>
+                    <input type="text" id="contactFirstname" name="contact-First-ame" placeholder="First name" required>
                     <br><br>
-                    <label for="contact-email">E-mail:</label><br>
-                    <input type="email" id="contact-email" name="contact-email" placeholder="Your E-mail...">
+                    <label for="contactLastName">Last name:</label><br>
+                    <input type="text" id="contactLastName" name="contactLastName" placeholder="Last name" required>
                     <br><br>
-                    <label for="contact-message">Message:</label><br>
-                    <textarea id="message" name="contact-message" rows="4" placeholder="Your message..."></textarea>
+                    <label for="contactEmail">E-mail:</label><br>
+                    <input type="email" id="contactEmail" name="contactEmail" placeholder="Your E-mail...">
+                    <br><br>
+                    <label for="contactMessage">Message:</label><br>
+                    <textarea id="message" name="contactMessage" rows="4" placeholder="Your message..."></textarea>
                     <br>
                     <button type="submit">Submit</button>
                 </form>
