pre xampp folder strucutre edit

--- a/contactDBphp.html
+++ b/contactDBphp.html
@@ -35,7 +35,7 @@
         <section id="contact">
             <div class="contact-form">
                 <h1>Contact Me</h1>
-                <form id="contact-form">
+                <form id="contact-form" method="post" action="/contact.php">
                     <label for="contactFirstname">First name:</label><br>
                     <input type="text" id="contactFirstname" name="contact-First-ame" placeholder="First name" required>
                     <br><br>
