xampp version updated

--- a/contactDB.html
+++ b/contactDB.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joost Sluijmer</title>
     <link rel="icon" href="/images\Tab-Icons\JS-icon.png"/>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/styles.css">
     <script src="/scripts/Reuse.js"></script>
     <!-- <script src="/scripts/Navigation.js"></script>
     <script src="/scripts/Sidebar.js"></script>
@@ -21,7 +21,7 @@
 <body>
     <header>
         <div>
-            <h1>Contact form in DB</h1>
+            <h1>Contact me!</h1>
         </div>
         <app-header-buttons></app-header-buttons>
     </header>
@@ -35,7 +35,7 @@
         <section id="contact">
             <div class="contact-form">
                 <h1>Contact Me</h1>
-                <form id="contact-form" method="post" action="contact.php">
+                <form id="contact-form" method="post" action="/contact.php">
                     <label for="contactFirstname">First name:</label><br>
                     <input type="text" id="contactFirstname" name="contactFirstname" placeholder="First name" required>
                     <br><br>
