--- a/contactDBxampp.html
+++ b/contactDBxampp.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joost Sluijmer</title>
-    <link rel="icon" href="/images\Tab-Icons\JS-icon.png"/>
-    <link rel="stylesheet" href="/styles.css">
-    <script src="/scripts/Reuse.js"></script>
+    <link rel="icon" href="images\Tab-Icons\JS-icon.png"/>
+    <link rel="stylesheet" href="styles.css">
+    <script src="scripts/Reuse.js"></script>
     <!-- <script src="/scripts/Navigation.js"></script>
     <script src="/scripts/Sidebar.js"></script>
     <script src="/scripts/HeaderButtons.js"></script>
     <script src="/scripts/Footer.js"></script> -->
-    <script src="/scripts/mobile-nav-button.js" defer></script>
-    <script src="/scripts/darkmode.js" defer></script>
-    <script src="/scripts/ScrollToTopBtn.js" defer></script>
+    <script src="scripts/mobile-nav-button.js" defer></script>
+    <script src="scripts/darkmode.js" defer></script>
+    <script src="scripts/ScrollToTopBtn.js" defer></script>
     <!-- <script src="/scripts/contact.js" defer></script> -->
 </head>
 
 <body>
     <header>
         <div>
-            <h1>Contact form in DB</h1>
+            <h1>Contact me!</h1>
         </div>
         <app-header-buttons></app-header-buttons>
     </header>
@@ -35,9 +35,9 @@
         <section id="contact">
             <div class="contact-form">
                 <h1>Contact Me</h1>
-                <form id="contact-form" method="post" action="/contact.php">
-                    <label for="contactFirstname">First name:</label><br>
-                    <input type="text" id="contactFirstname" name="contact-First-ame" placeholder="First name" required>
+                <form id="contact-form" method="post" action="contact.php">
+                    <label for="contactFirstName">First name:</label><br>
+                    <input type="text" id="contactFirstName" name="contactFirstName" placeholder="First name" required>
                     <br><br>
                     <label for="contactLastName">Last name:</label><br>
                     <input type="text" id="contactLastName" name="contactLastName" placeholder="Last name" required>
