end of day sync

--- a/HU_projects.html
+++ b/HU_projects.html
@@ -33,11 +33,13 @@
     <main>
         <article>
             <div class="article-title">
-                <h2>heading 2 (article title?)</h2>
+                <h2>My first year</h2>
                 <div class="article-info">
-                    <h3>heading 3 (article info?)</h3>
+                    <h3>Quarter A</h3>
                     <div class="article-text">
-                        Enter text here!
+                        In the first quarter of the year (blok A) I chose to make a personal protfolio. That is how we arriver here.
+                        This website is build entirely by me, to showcase my history, skills and capabilities.
+                        
                     </div>
                 </div>
             </div>  
