--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="article-info">
                     <h3>A little bit about me.</h3>
                     <div class="article-text">
-                                       
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, odit ipsum eaque soluta iste fugit eveniet quis ea quo perferendis quos ducimus modi eius asperiores, dolor saepe accusamus possimus. Sit!        
                     </div>
                 </div>
             </div>  
