--- a/my_history.html
+++ b/my_history.html
@@ -77,6 +77,7 @@
                               <p class="title">But sometimes you just need to take a break.</p>
                             </div>
                         </div>
+                        <h3>Courses and Experiences</h3>
                         <h4>WTB?</h4>
                         <article>
                             WTB text
