--- a/index.html
+++ b/index.html
@@ -36,8 +36,12 @@
                 <h2>Welcome to my personal website.</h2>
                 <div class="article-info">
                     <h3>A little bit about me.</h3>
-                    <div class="article-text">
+                    <div class="zigzag-article-text-left" id="">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, odit ipsum eaque soluta iste fugit eveniet quis ea quo perferendis quos ducimus modi eius asperiores, dolor saepe accusamus possimus. Sit!        
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nulla possimus ex optio dicta vero, dolores ratione iusto, tenetur exercitationem nemo ipsum et. Voluptas dicta consectetur praesentium quaerat assumenda maxime.lor
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quae maiores, consequatur distinctio vitae porro adipisci expedita ad quisquam! Eaque veniam a non pariatur quae beatae itaque? Facere, repellendus quisquam.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, cupiditate itaque rem consectetur quibusdam. Voluptatum facere nostrum sed eius, rem modi, sit vero doloremque officiis mollitia deleniti, illo fuga.
+                        <img src="images\personal_images\Beach_sunglasses.jpg" alt="My face">
                     </div>
                 </div>
             </div>  
