--- a/HU_projects.html
+++ b/HU_projects.html
@@ -37,7 +37,7 @@
                 <div class="article-info">
                     <h3>Quarter A</h3>
                     <div class="article-text">
-                        In the first quarter of the year (blok A) I chose to make a personal protfolio. That is how we arriver here.
+                        In the first quarter of the year (blok A) I chose to make a personal portfolio. That is how we arriver here.
                         This website is build entirely by me, to showcase my history, skills and capabilities.
                         
                     </div>
