--- a/index.html
+++ b/index.html
@@ -37,10 +37,15 @@
                 <div class="article-info">
                     <h3>A little bit about me.</h3>
                     <div class="zigzag-article-text-left" id="">
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consequatur, odit ipsum eaque soluta iste fugit eveniet quis ea quo perferendis quos ducimus modi eius asperiores, dolor saepe accusamus possimus. Sit!        
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti nulla possimus ex optio dicta vero, dolores ratione iusto, tenetur exercitationem nemo ipsum et. Voluptas dicta consectetur praesentium quaerat assumenda maxime.lor
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Est quae maiores, consequatur distinctio vitae porro adipisci expedita ad quisquam! Eaque veniam a non pariatur quae beatae itaque? Facere, repellendus quisquam.
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus fuga, cupiditate itaque rem consectetur quibusdam. Voluptatum facere nostrum sed eius, rem modi, sit vero doloremque officiis mollitia deleniti, illo fuga.
+                        I am a student at the Hogeschool Utrecht Open-ICT.
+                        My prefered style of learning is by experimenting and doing. 
+                        I try to prevent doing repetitive work wherever I can since it is one of my biggest demotivator.
+
+                        Since I was a child I have taken appart and put together devices and had an intense interest in how things worked.
+                        Later this grew from understanding how things worked into wanting to create things.
+                        Whenever something broke I would try to fix it myself (with a high succes rate).
+                        As I grew older my projects became more advanced. I built my own computers and servers.
+                        I started transitioning from only hardware to software aswell.
                         <img src="images\personal_images\Beach_sunglasses.jpg" alt="My face">
                     </div>
                 </div>
