--- a/index.html
+++ b/index.html
@@ -37,15 +37,19 @@
                 <div class="article-info">
                     <h3>A little bit about me.</h3>
                     <div class="zigzag-article-text-left" id="">
-                        I am a student at the Hogeschool Utrecht Open-ICT.
+                        I am a student at the Hogeschool Utrecht Open-ICT. <br>
                         My prefered style of learning is by experimenting and doing. 
-                        I try to prevent doing repetitive work wherever I can since it is one of my biggest demotivator.
-
-                        Since I was a child I have taken appart and put together devices and had an intense interest in how things worked.
+                        I try to prevent doing repetitive work wherever I can since it is one of my biggest demotivators.
+                        <br><br>
+                        Since I was a child I have taken apart and put together devices and had an intense interest in how things worked.
                         Later this grew from understanding how things worked into wanting to create things.
                         Whenever something broke I would try to fix it myself (with a high succes rate).
                         As I grew older my projects became more advanced. I built my own computers and servers.
                         I started transitioning from only hardware to software aswell.
+                        <br><br>
+                        Nowadays I am going more in depth in the subjects I am already interested in.
+                        Besides that I am learning, by studying, a lot about the proper and professional ways to do things.
+                        Currently I am keeping an open mind and try as many things as possible to make an educated decision on what field(s) I want to specialize.
                         <img src="images\personal_images\Beach_sunglasses.jpg" alt="My face">
                     </div>
                 </div>
